# git-training

./: CMakeLists.txt  README.md  abc.txt  apythonfile.py  sample.cpp
abc.patch/: patchfile.txt
src/: main.cpp  triAngle.py
test/: CMakeLists.txt  check_cred_data.cpp  check_cred_test.cpp
